# leadswipe-api

./: .env.example  .gitignore  CLAUDE.md  MESSAGE_POUR_CURSOR.md  Procfile  pyproject.toml  railway.toml  requirements.txt
chrome_extension/: content.js  manifest.json  popup.html  popup.js
config/: groups.json
directives/: scrape_facebook_group.md
execution/: add_group.py  analyze_posts.py  analyze_posts_ai.py  api_server.py  auto_scrape.py  scheduler.py  scrape_facebook_apify.py
